# utxo-miden

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: advice_provider.rs  config.rs  inputs.rs  main.rs  masm_tests.rs  utils.rs  utxo.rs
cli/src/cli/: mod.rs  no_zk.rs  prove.rs  run.rs
example/: tx_1.json  tx_2.json  tx_3.json
masm/: signed_tx.json  state.json  utxo.inputs  utxo.masm
