[workspace.package]
authors = ["Michael Birch <birchmd8@gmail.com>", "Bulent Tastan <bulenttastan@gmail.com>"]
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/0xDuo/utxo-miden"
repository = "https://github.com/0xDuo/utxo-miden"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4.4", features = ["derive"] }

[workspace]
resolver = "2"
members = [
    "cli",
]


