[workspace.package]
authors = ["Michael Birch <birchmd8@gmail.com>", "Bulent Tastan <bulenttastan@gmail.com>"]
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/0xDuo/utxo-miden"
repository = "https://github.com/0xDuo/utxo-miden"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4.4", features = ["derive"] }
hex = "0.4"
miden-core = "0.7"
miden-crypto = { version = "0.7", features = ["serde"] }
birchmd-miden-crypto = { package = "miden-crypto", git = "https://github.com/birchmd/miden-crypto", rev = "95b6e893870df6d4cf2c479f49ad2a982389ecf6", features = ["serde"] }
miden-processor = "0.7"
miden-stdlib = "0.6.0"
miden-vm = { version = "0.7", features = ["concurrent"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winter-utils = "0.6"

[workspace]
resolver = "2"
members = [
    "cli",
]


