[package]
name = "utxo-miden-cli"
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
hex.workspace = true
miden-crypto.workspace = true
miden-stdlib.workspace = true
miden-vm.workspace = true
serde.workspace = true
serde_json.workspace = true
winter-utils.workspace = true
